assets/main.scss
---
---

@import "minima";
@import "header";
@import "footer";
@import "darkmode";
@import "book";

:root {
  --clr-light: #f5f5f5;
  --clr-dark: #303335;
  --clr-link: #626262;
  --clr-primary: #000;
  --clr-secondary: #949494;
  --clr-accent: #ffca04;
  --clr-darkmode: var(--clr-link);

  --clr-code-dark: #eef;
  --clr-code: #3c3c3c61;

  --background: var(--clr-light);
  --foreground: var(--clr-dark);

  --padding: 10px;
  --transition: ease 0.4s;
}

body {
  background: var(--background);
  color: var(--foreground);
  text-align: center;
  padding-bottom: calc(var(--pading) * 6);

  margin: 0;
  margin-bottom: 0px;
  padding: 0;
  border: none;
  outline: none;
  box-sizing: border-box;
  text-decoration: none;
  font-family: "iA", monospace;
  font-weight: 400;
  vertical-align: baseline;
  font-size: 17px;
  letter-spacing: -.016em;
  line-height: 2;
}

blockquote, h1, h2, h3, ol, p, small, ul {
  margin-bottom: calc(var(--padding) * 2);
  display: block;
}

.interface {
  text-align: left;
}

a {
  color: inherit;
  transition: color var(--transition), border var(--transition);
  border-bottom: 2px solid var(--clr-accent);

  &:hover {
    color: var(--clr-accent);
    border-bottom: 2px solid var(--clr-accent);
    text-decoration: none;
  }

  &:visited {
    color: inherit;

    &:hover {
      color: var(--clr-accent);
    }
  }
}

.hello {
  text-align: center;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: var(--clr-dark);
    --foreground: var(--clr-light);
    --clr-darkmode: var(--clr-accent);
  }
}

.highlighter-rouge .highlight  {
  background: var(--clr-code);
}

.highlighter-rouge {
  background-color: var(--clr-code);
}

pre, code {
  background-color: transparent;
}

img {
  width: 100%;
}

